# survivor

./: .gitignore  .replit  db.sqlite3  package-lock.json  package.json  playwright.config.ts  pyproject.toml  replit.md
.github/workflows/: postgres-ci.yml
members/templates/registration/: login.html  registration.html
staticfiles/: staticfiles.json
survivor/: settings.py  wsgi.py
survivorPool/: admin.py  chat_views.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
survivorPool/management/commands/: fetch_nfl_odds.py  fetch_nfl_schedule.py  fetch_nfl_winners.py  lock_week_and_post_chat.py  populate_nfl_teams.py  seed_browser_smoke.py
survivorPool/migrations/: 0007_alter_pick_is_win_alter_pick_publication_date.py  0010_alter_pick_publication_date.py  0011_game.py  0012_chat_weeklock_pick_missed_seasonsettings.py  0013_alter_chatmessage_options.py
survivorPool/static/: style.css
survivorPool/tasks/: nfl.py
survivorPool/templates/: add_pick.html  allPicks.html  base.html  chat.html  home.html  league_leaderboard.html  pot.html  rules.html  update_pick.html
tests/e2e/: survivor-smoke.spec.ts
