[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "django-background-tasks>=1.2.8",
    "django-tables2>=2.7.5",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
]
